Renamed recipefinder.html to index.html and updated links

--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./recipefinder.html" >Home</a>
+          <a class="nav-link active" aria-current="page" href="./index.html" >Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./about.html">About</a>
@@ -37,7 +37,7 @@
             <li><a class="dropdown-item" href="./signup.html">Sign up</a></li>
             <li><a class="dropdown-item" href="./login.html">Login</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="./recipefinder.html">Explore As A Guest</a></li>
+            <li><a class="dropdown-item" href="./index.html">Explore As A Guest</a></li>
           </ul>
         </li>
        <!--- <li class="nav-item">
@@ -105,7 +105,7 @@
     <div class="footer-links">
       <h4>Quick Links</h4>
       <ul>
-        <li><a href="./recipefinder.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./contact.html">Contact</a></li>
         <li><a href="./about.html">About Us</a></li>
       </ul>
