--- a/recipes.html
+++ b/recipes.html
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./recipefinder.html" >Home</a>
+          <a class="nav-link active" aria-current="page" href="./index.html" >Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./about.html">About</a>
@@ -36,7 +36,7 @@
             <li><a class="dropdown-item" href="./signup.html">Sign up</a></li>
             <li><a class="dropdown-item" href="./login.html">Login</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="./recipefinder.html">Explore As A Guest</a></li>
+            <li><a class="dropdown-item" href="./index.html">Explore As A Guest</a></li>
           </ul>
         </li>
        <!--- <li class="nav-item">
