Updated layout styles and fixed responsive issues

--- a/index.html
+++ b/index.html
@@ -165,11 +165,12 @@
 
       </div>
 
-    <div class="img-1">
-              <img class="three-image-block" src="./block-image3.jpg" alt="Second image in 3 images block">
+    <div class="img-1-i">   
               <h3 style="color:teal; font-family:'Times New Roman', Times, serif ; margin-left: 80px; margin-top: 50px; "  >03</h3>
               <h2>Cook with Ease</h2>
               <p>Follow simple steps to create delicious food at home.</p>
+              <img class="three-image-block1" src="./block-image3.jpg" alt="Second image in 3 images block">
+
 
 
   </div>
@@ -190,6 +191,7 @@
 
 <div class="parallax-container">
 </div>
+
 
 <section class="image-with-text">
   <div class="image">
