--- a/index.html
+++ b/index.html
@@ -61,23 +61,23 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="./Cooking2.jpg"  style="width:100%; height:100vh; object-fit:cover; display:block; background-attachment:fixed;" class="d-block w-100" alt="coursel1">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Discover Delicious Recipes</h5>
-        <p>Search from thousands of mouthwatering dishes and find the perfect recipe for any occasion.</p>
+      <div class="carousel-caption ">
+        <h5 class="fs-5 fs-md-3" >Discover Delicious Recipes</h5>
+        <p class="fs-6 fs-md-5" >Search from thousands of mouthwatering dishes and find the perfect recipe for any occasion.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="./cooking4.jpg" style="width:100%; height:100vh; object-fit:cover; display:block; background-attachment:fixed;" class="d-block w-100" alt="coursel2">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Cook Like a Pro</h5>
-        <p>Follow step-by-step instructions and cooking tips to make every meal a masterpiece.</p>
+      <div class="carousel-caption">
+        <h5 class="fs-5 fs-md-3" >Cook Like a Pro</h5>
+        <p "fs-6 fs-md-5" >Follow step-by-step instructions and cooking tips to make every meal a masterpiece.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="cooking3.jpg" style="width:100%; height:100vh; object-fit:cover; display:block; background-attachment:fixed;" class="d-block w-100" alt="coursel3">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Fresh Ingredients, Big Flavor</h5>
-        <p>Turn simple ingredients into amazing meals that your family and friends will love.</p>
+      <div class="carousel-caption">
+        <h5 class="fs-5 fs-md-3" >Fresh Ingredients, Big Flavor</h5>
+        <p class="fs-6 fs-md-5" >Turn simple ingredients into amazing meals that your family and friends will love.</p>
       </div>
     </div>
   </div>
